--- a/umbrel-app-store.yml
+++ b/umbrel-app-store.yml
@@ -1,2 +1,3 @@
-id: "sparkles" # Choose the ID for your app store. This should contain only alphabets ("a to z") and dashes ("-").
-name: "Sparkles" # Choose the name of your app store. It will show up in the UI as "<name> App Store".
+id: "entity" # Choose the ID for your app store. This should contain only alphabets ("a to z") and dashes ("-").
+
+name: "Entity's Umbrel" # Choose the name of your app store. It will show up in the UI as "<name> App Store".
