--- a/entity-auto-mcs/umbrel-app.yml
+++ b/entity-auto-mcs/umbrel-app.yml
@@ -1,5 +1,6 @@
 manifestVersion: 1
-id: denny-auto-mcs
+
+id: entity-auto-mcs
 name: Auto-MCS
 tagline: A cross-platform Minecraft server manager
 icon: https://i.imgur.com/G9YaRia.png
@@ -42,3 +43,9 @@ dependencies: []
 path: ""
 defaultUsername: "root"
 defaultPassword: "auto-mcs"
+
+
+
+
+
+
