--- a/entity-auto-mcs/docker-compose.yml
+++ b/entity-auto-mcs/docker-compose.yml
@@ -3,24 +3,58 @@ version: "3.7"
 services:
   app_proxy:
     environment:
-      APP_HOST: denny-auto-mcs_app_1
+      APP_HOST: entity-auto-mcs_app_1
       APP_PORT: 8080
 
   app:
-    image: macarooniman/auto-mcs:2.3.3@sha256:76db7675f9d6893b09034d62d5a6f404151e26c0c7efb6de1c54ee26f9cdeda3
+    image: macarooniman/auto-mcs:2.3.4@sha256:d6c47811dbd1c6d5dfd399820e1fafd77ba0dbb71be3693af55c9312a64d2f26
     command: [
       "auto-mcs-ttyd",
       "-W",
+
       "-t", "disableLeaveAlert=true",
+
       "-t", "titleFixed=auto-mcs",
+
       "-t", "fontSize=20",
+
+
       "-t", "theme={\"background\": \"#1A1A1A\"}",
+
+
+
+
+
+
       "-p", "8080",
       "-c", "root:auto-mcs",
+
+
       "tmux", "-u", "-2", "new", "-A",
+
+
+
+
+
       "-s", "auto-mcs",
+
+
+
+
+
+
+
+
+
+
       "-c", ".",
       "./auto-mcs"
+
+
+
+
+
+
     ]
     stdin_open: true
     tty: true
